# transcode

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  GOOD_FIRST_ISSUES.md  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml
.cargo/: audit.toml  config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml  stale.yml
docker/: prometheus.yml
docs/: blog-post.md  book.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: aac_adts.rs  bitreader.rs  fuzz_aac_decoder.rs  fuzz_bitstream.rs  fuzz_h264_decoder.rs  fuzz_mp4_demuxer.rs  h264_nal.rs  h264_pps.rs  h264_slice.rs  h264_sps.rs  hevc_nal.rs  mkv_ebml.rs  mp3_frame.rs  mp4_atoms.rs  opus_packet.rs  ts_packet.rs  ts_pes.rs  vp9_bitstream.rs
transcode-abr/: Cargo.toml
transcode-abr/src/: error.rs  ladder.rs  lib.rs  optimizer.rs  profile.rs
transcode-ac3/: Cargo.toml  README.md
transcode-ac3/src/: decoder.rs  encoder.rs  ffi.rs  lib.rs  parser.rs  types.rs
transcode-ai/: Cargo.toml  README.md
transcode-ai/src/: denoiser.rs  error.rs  interpolator.rs  lib.rs  model.rs  onnx.rs  upscaler.rs
transcode-alac/: Cargo.toml  README.md
transcode-alac/src/: bitstream.rs  decoder.rs  encoder.rs  error.rs  lib.rs
transcode-analytics/: Cargo.toml  README.md
transcode-analytics/src/: error.rs  lib.rs  metrics.rs  timeseries.rs
transcode-audio-ai/: Cargo.toml  README.md
transcode-audio-ai/src/: classify.rs  enhance.rs  error.rs  lib.rs  lufs.rs  spectral.rs  upsample.rs
transcode-av1/: Cargo.toml  README.md
transcode-av1/src/: config.rs  decoder.rs  encoder.rs  error.rs  lib.rs
transcode-av1/tests/: integration_tests.rs
transcode-avi/: Cargo.toml  README.md
transcode-avi/src/: chunks.rs  demuxer.rs  error.rs  lib.rs  muxer.rs  types.rs
transcode-bench/: Cargo.toml  README.md
transcode-bench/benches/: codecs.rs  containers.rs  filters.rs  quality.rs
transcode-bench/src/: lib.rs
transcode-capi/: Cargo.toml  README.md  build.rs  cbindgen.toml  transcode.h
transcode-capi/examples/: Makefile  decode_frames.c  transcode_demo.c
transcode-capi/include/: transcode.h
transcode-capi/src/: lib.rs
transcode-caption/: Cargo.toml  README.md
transcode-caption/src/: error.rs  lib.rs  subtitle.rs  timing.rs
transcode-cineform/: Cargo.toml  README.md
transcode-cineform/src/: decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  quantize.rs  tables.rs  types.rs  wavelet.rs
transcode-cli/: Cargo.toml  README.md
transcode-cli/src/: main.rs
transcode-cli/src/commands/: codecs.rs  completions.rs  doctor.rs  info.rs  mod.rs  presets.rs
transcode-cloud/: Cargo.toml  README.md
transcode-cloud/src/: azure.rs  error.rs  gcs.rs  lib.rs  s3.rs
transcode-codecs/: Cargo.toml  README.md
transcode-codecs/benches/: codec_bench.rs
transcode-codecs/src/: lib.rs  parallel.rs  traits.rs
transcode-codecs/src/audio/: mod.rs
transcode-codecs/src/audio/aac/: adts.rs  decoder.rs  encoder.rs  huffman.rs  mdct.rs  mod.rs  psy.rs  tables.rs  tns.rs
transcode-codecs/src/audio/mp3/: decoder.rs  encoder.rs  huffman.rs  mod.rs  tables.rs
transcode-codecs/src/simd/: aarch64.rs  detect.rs  mod.rs  scalar.rs  x86_64.rs
transcode-codecs/src/video/: mod.rs
transcode-codecs/src/video/h264/: cabac.rs  cavlc.rs  deblock.rs  decoder.rs  dpb.rs  encoder.rs  mb_encoder.rs  mod.rs  nal.rs  parallel.rs  pps.rs  prediction.rs  presets.rs  slice.rs  sps.rs  transform.rs
transcode-codecs/tests/: codec_roundtrip.proptest-regressions  codec_roundtrip.rs
transcode-compat/: Cargo.toml  README.md
transcode-compat/src/: command.rs  error.rs  filter.rs  filter_exec.rs  formats.rs  lib.rs  options.rs  preset.rs
transcode-compliance/: Cargo.toml
transcode-compliance/src/: accessibility.rs  audit.rs  captions.rs  error.rs  lib.rs  regulation.rs
transcode-confidential/: Cargo.toml
transcode-confidential/src/: attestation.rs  audit.rs  enclave.rs  error.rs  keys.rs  lib.rs  pipeline.rs
transcode-conformance/: Cargo.toml  README.md
transcode-conformance/src/: cache.rs  checksum.rs  download.rs  h264_tests.rs  lib.rs  profiles.rs  report.rs  runner.rs  stream.rs  validation.rs
transcode-containers/: Cargo.toml  README.md
transcode-containers/src/: chapters.rs  lib.rs  traits.rs
transcode-containers/src/concat/: demuxer.rs  mod.rs
transcode-containers/src/mp4/: atoms.rs  demuxer.rs  mod.rs  muxer.rs
transcode-containers/tests/: mp4_muxer_tests.rs
transcode-core/: Cargo.toml  README.md
transcode-core/src/: bitstream.rs  error.rs  format.rs  frame.rs  lib.rs  metrics.rs  packet.rs  pool.rs  rational.rs  sample.rs  timestamp.rs
transcode-core/tests/: proptest_bitstream.rs
transcode-dashboard/: Cargo.toml
transcode-dashboard/src/: alerts.rs  collector.rs  error.rs  html.rs  lib.rs  report.rs
transcode-deinterlace/: Cargo.toml  README.md
transcode-deinterlace/src/: bob.rs  bwdif.rs  detect.rs  error.rs  lib.rs  linear.rs  yadif.rs
transcode-distributed/: Cargo.toml  README.md
transcode-distributed/examples/: basic_coordinator.rs
transcode-distributed/src/: coordinator.rs  error.rs  lib.rs  persistence.rs  redis.rs  task.rs  worker.rs
transcode-dnxhd/: Cargo.toml  README.md
transcode-dnxhd/src/: decoder.rs  encoder.rs  error.rs  frame.rs  huffman.rs  lib.rs  profile.rs  tables.rs  types.rs
transcode-dolby/: Cargo.toml  README.md
transcode-dolby/src/: converter.rs  error.rs  extractor.rs  lib.rs  mapping.rs  metadata.rs  profile.rs  rpu.rs
transcode-drm/: Cargo.toml  README.md
transcode-drm/src/: aes_ctr.rs  cbcs.rs  cenc.rs  error.rs  fairplay.rs  key.rs  lib.rs  playready.rs  widevine.rs
transcode-drm/tests/: security_tests.rs
transcode-dts/: Cargo.toml  README.md
transcode-dts/src/: decoder.rs  encoder.rs  ffi.rs  lib.rs  parser.rs  types.rs
(+659 files in other folders)
