[package]
name = "transcode-abr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Adaptive bitrate ladder generation with content-aware optimization"
keywords = ["abr", "bitrate", "ladder", "per-title", "streaming"]
categories = ["multimedia::video"]

[dependencies]
transcode-core = { path = "../transcode-core" }

# Error handling
thiserror.workspace = true

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
