[package]
name = "transcode-ac3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AC-3 (Dolby Digital) and E-AC-3 audio codec support via FFI wrapper"
keywords = ["audio", "ac3", "dolby", "eac3", "codec"]
categories = ["multimedia::audio", "encoding"]

[dependencies]
transcode-core = { path = "../transcode-core" }

thiserror.workspace = true
tracing.workspace = true
byteorder.workspace = true
bytes.workspace = true

# FFmpeg FFI bindings (optional - user must have FFmpeg installed)
# ffmpeg-sys-next = { version = "7.0", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[features]
default = []
# Enable FFmpeg FFI integration (requires FFmpeg dev libraries)
# When enabled, uncomment the ffmpeg-sys-next dependency above
ffi-ffmpeg = []
