[package]
name = "transcode-av1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AV1 codec support for the transcode library"
keywords = ["av1", "video", "codec", "rav1e", "encoding"]
categories = ["multimedia::video", "encoding"]

[features]
default = ["encoder", "decoder"]
encoder = ["rav1e"]
decoder = ["dav1d"]

[dependencies]
transcode-core = { path = "../transcode-core" }

# AV1 encoder
rav1e = { version = "0.8", optional = true }

# AV1 decoder
dav1d = { version = "0.11", optional = true }

# Utilities
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
