[package]
name = "transcode-avi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AVI container format support (demuxer and muxer)"
keywords = ["avi", "riff", "video", "container", "demuxer"]
categories = ["multimedia::video"]

[dependencies]
byteorder = "1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
