[package]
name = "transcode-caption"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Automatic captioning and subtitle extraction for transcode"
keywords = ["video", "captions", "subtitles", "speech-to-text", "whisper"]
categories = ["multimedia", "text-processing"]

[dependencies]
transcode-core = { path = "../transcode-core" }

thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
# Whisper feature is a placeholder - integration requires building whisper.cpp separately
whisper = []
