[package]
name = "transcode-cineform"
version = "0.1.0"
edition = "2021"
description = "CineForm video codec implementation (GoPro intermediate codec)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/transcode"
keywords = ["cineform", "gopro", "video", "codec", "intermediate"]
categories = ["multimedia::video"]

[dependencies]
byteorder = "1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
