[package]
name = "transcode-cineform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CineForm video codec implementation (GoPro intermediate codec)"
keywords = ["cineform", "gopro", "video", "codec", "intermediate"]
categories = ["multimedia::video"]

[dependencies]
byteorder = "1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
