[package]
name = "transcode-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embeddable quality monitoring dashboard for real-time PSNR/SSIM/VMAF visualization"
keywords = ["quality", "dashboard", "psnr", "ssim", "vmaf"]
categories = ["multimedia", "visualization"]

[dependencies]
transcode-core = { path = "../transcode-core" }

# Error handling
thiserror.workspace = true

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
