[package]
name = "transcode-deinterlace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deinterlacing filters for transcode"
keywords = ["video", "deinterlace", "interlace", "bob", "yadif"]
categories = ["multimedia::video"]

[dependencies]
transcode-core = { path = "../transcode-core" }

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
simd = []
