[package]
name = "transcode-dnxhd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DNxHD/DNxHR video codec implementation"
keywords = ["dnxhd", "dnxhr", "video", "codec", "avid"]
categories = ["multimedia::video"]

[dependencies]
byteorder = "1.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
